--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="width: 100%; height: 100%"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
